# revpi-bluetooth

./: .gitlab-ci.yml  CMakeLists.txt  README.md  revpi-bluetooth_1.0.0.orig.tar.gz.delta  revpi-bluetooth_1.0.0.orig.tar.gz.id  revpi-bluetooth_1.0.1.orig.tar.gz.delta  revpi-bluetooth_1.0.1.orig.tar.gz.id  revpi-bluetooth_1.0.2.orig.tar.gz.delta  revpi-bluetooth_1.0.2.orig.tar.gz.id  revpi-bluetooth_1.0.3.orig.tar.gz.delta  revpi-bluetooth_1.0.3.orig.tar.gz.id  revpi-bluetooth_1.0.4.orig.tar.gz.delta  revpi-bluetooth_1.0.4.orig.tar.gz.id  revpi-bluetooth_1.1.0.orig.tar.gz.delta  revpi-bluetooth_1.1.0.orig.tar.gz.id  revpi-bluetooth_1.1.1.orig.tar.gz.delta  revpi-bluetooth_1.1.1.orig.tar.gz.id  revpi-bluetooth_1.1.2.orig.tar.gz.delta  revpi-bluetooth_1.1.2.orig.tar.gz.id
.reuse/: dep5
LICENSES/: LicenseRef-binary-redist-Broadcom-wifi.txt
debian/: changelog  control  copyright  gbp.conf  rules
firmware/: CMakeLists.txt
lib/systemd/system/: revpi-bthelper@.service  revpi-hciuart@.service
lib/udev/rules.d/: 90-revpi-bluetooth.rules
scripts/: CMakeLists.txt  revpi-bthelper  revpi-btuart
systemd/: CMakeLists.txt  revpi-bthelper@.service  revpi-hciuart@.service
udev/: 90-revpi-bluetooth.rules  CMakeLists.txt
usr/sbin/: revpi-bthelper
